# polygon-detector-opencv

./: LICENSE  README.md
build-polygon-detector-opencv-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-polygon-detector-opencv-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-dc43193444aa40dbb02d.json  cmakeFiles-v1-e37833afa611ecfc304c.json  codemodel-v2-81168c57cf1e2d1ee49f.json  directory-.-Debug-58562e58819fda28ab9d.json  index-2024-05-19T22-11-19-0764.json  target-PolygonsDetector-Debug-8cf89c586234f5190208.json  target-PolygonsDetector_autogen-Debug-11322fb28623123ba5f8.json  target-PolygonsDetector_autogen_timestamp_deps-Debug-86aadd0caaa0a5b95f74.json
build-polygon-detector-opencv-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-f52f6600639559c12c74.json  directory-.-Debug-58fca0b9d7e8828fad85.json  index-2024-05-19T21-25-25-0165.json  target-PolygonsDetector-Debug-4260eae41ddd205c403b.json
build-polygon-detector-opencv-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-polygon-detector-opencv-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/PolygonsDetector_autogen/: deps  mocs_compilation.cpp
build-polygon-detector-opencv-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/PolygonsDetector_autogen/YPKJ5OE7LN/: moc_dashfunctionwidget.cpp  moc_dashfunctionwidget.cpp.d  moc_imagecardwidget.cpp  moc_imagecardwidget.cpp.d  moc_imagedetailswidget.cpp  moc_imagedetailswidget.cpp.d  moc_imageresultswidget.cpp  moc_imageresultswidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_menubutton.cpp  moc_menubutton.cpp.d  moc_menuwidget.cpp  moc_menuwidget.cpp.d
build-polygon-detector-opencv-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/PolygonsDetector_autogen/include/: ui_dashfunctionwidget.h  ui_imagecardwidget.h  ui_imagedetailswidget.h  ui_imageresultswidget.h  ui_mainwindow.h  ui_menubutton.h  ui_menuwidget.h
core/: CMakeLists.txt  main.cpp
core/include/: colors.h
core/res/: colors.json  palettes.json  resources.qrc
core/src/core/image/: image.cpp  image.h
core/src/core/polygon/: polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
core/src/core/polygon_detector/: polygonsdetector.cpp  polygonsdetector.h
core/src/core/polygon_factory/: polygonfactory.cpp  polygonfactory.h
core/src/ui/: dashfunctionwidget.cpp  dashfunctionwidget.h  dashfunctionwidget.ui  imagecardwidget.cpp  imagecardwidget.h  imagecardwidget.ui  imagedetailswidget.cpp  imagedetailswidget.h  imagedetailswidget.ui  imageresultswidget.cpp  imageresultswidget.h  imageresultswidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubutton.cpp  menubutton.h  menubutton.ui  menuwidget.cpp  menuwidget.h  menuwidget.ui
